# confidential-cloud-native-primitives

./: .gitignore  OWNERS.md  README.md
.github/: .license_check.ini  cspell.json  pylintrc
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: contributor-list.yaml  e2e-test.yaml  image-rewriter.yaml  pr-check-rust.yaml  pr-container-check.yaml  pr-doclint.yaml  pr-golang-check.yaml  pr-golanglint.yaml  pr-license-python.yaml  pr-license.yaml  pr-pylint.yaml  pr-shell-check.yaml  publish-ccnp.yaml
api/: eventlog-server.proto  measurement-server.proto
chart/eventlog-server/templates/: NOTES.txt
chart/measurement-server/: values.yaml
chart/measurement-server/templates/: daemonset.yaml
container/: README.md  build.sh
container/ccnp-device-plugin/: Dockerfile
container/ccnp-measurement-server/: Dockerfile
container/ccnp-node-measurement-example/: Dockerfile  fetch_node_measurement.py
container/ccnp-quote-server/: Dockerfile
container/eventlog-server/: Dockerfile
container/measurement-server/: Dockerfile
container/pccs/: Dockerfile  README.md  default.json  network_setting.conf  pre-built.sh
container/pod-quote/: Dockerfile
container/qgs/: Dockerfile  README.md  sgx_default_qcnl.conf
container/quote-server/: Dockerfile
deployment/: README.md
deployment/charts/eventlog-server/: Chart.yaml  values.yaml
deployment/charts/measurement-server/: values.yaml
deployment/charts/quote-server/: Chart.yaml  values.yaml
deployment/docker-compose/: README.md  cleanup.sh  depoly-ccnp.sh  exec-ccnp-example.sh  prepare.sh
deployment/docker-compose/configs/: ccnp-node-measurement-example.yaml.template  eventlog-compose.yaml.template  measurement-compose.yaml.template  quote-compose.yaml.template
deployment/docker-compose/scripts/: cache.sh  comm.sh  device.sh  docker_compose.sh
deployment/kubernetes/: README.md
deployment/kubernetes/manifests/: ccnp-node-measurement-example-deployment.yaml  eventlog-server-deployment.yaml  measurement-server-deployment.yaml  namespace.yaml  quote-server-deployment.yaml
deployment/kubernetes/script/: prerequisite.sh
deployment/manifests/: ccnp-node-measurement-example-deployment.yaml  eventlog-server-deployment.yaml  measurement-server-deployment.yaml  pod-quote-deployment.yaml  quote-server-deployment.yaml
deployment/script/: build-CCNP.sh  deploy-CCNP.sh  deploy-and-exec-ccnp-example.sh  deploy-ccnp.sh  image-manager.sh
device-plugin/ccnp-device-plugin/: Makefile  README.md  go.mod  go.sum
device-plugin/ccnp-device-plugin/container/: Dockerfile
device-plugin/ccnp-device-plugin/deploy/: node-feature-rules.yaml
docs/: .buildinfo  CCNP Installation Guide.md  CCNP-Installation-Guide.md  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  readme.html  sample-output-for-node-measurement-tool-full.txt  sample-output-for-node-measurement-tool-selected.txt  search.html  searchindex.js
docs/.doctrees/: ccnp.doctree  ccnp.eventlog.doctree  ccnp.measurement.doctree  ccnp.quote.doctree  environment.pickle  index.doctree  modules.doctree  readme.doctree
docs/.doctrees/eventlog/: eventlog.doctree  modules.doctree
docs/.doctrees/measurement/: measurement.doctree  modules.doctree
docs/_modules/: index.html
docs/_rst/: ccnp.eventlog.html  ccnp.html  ccnp.measurement.html  ccnp.quote.html  deployment.readme.html  modules.html  readme.html  sdk.readme.html  service.eventlog.html  service.measurement.html  service.quote.html
docs/_rst_file/: .buildinfo  ccnp.rst  conf.py  deployment.readme.rst  readme.rst  sdk.readme.rst  service.eventlog.rst  service.quote.rst
docs/_sources/: index.rst.txt
docs/source/: ccnp.eventlog.html  ccnp.html  ccnp.measurement.html  ccnp.quote.html  modules.html
docs/sphinx/: conf.py
sdk/python3/: README.md  pyproject.toml  setup.cfg
sdk/python3/ccnp/: __init__.py  pyproject.toml  requirements.txt
sdk/python3/ccnp/eventlog/: eventlog_sdk.py  eventlog_server_pb2_grpc.py
sdk/python3/ccnp/measurement/: measurement_sdk.py  measurement_server_pb2_grpc.py
sdk/python3/ccnp/quote/: quote_sdk.py  quote_server_pb2.py  quote_server_pb2.pyi  quote_server_pb2_grpc.py
sdk/python3/ccnp/src/eventlog/: eventlog_sdk.py  eventlog_server_pb2.py  eventlog_server_pb2.pyi  eventlog_server_pb2_grpc.py
sdk/python3/ccnp/src/measurement/: measurement_sdk.py  measurement_server_pb2.py  measurement_server_pb2.pyi  measurement_server_pb2_grpc.py
sdk/python3/tests/: conftest.py  test_eventlog.py  test_measurement.py
service/ccnp-server/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  ccnp-compose.yaml  gen.tar
service/ccnp-server/proto/: ccnp-server.proto
service/ccnp-server/py_gen/: ccnp_server_pb2.py  ccnp_server_pb2.pyi  ccnp_server_pb2_grpc.py  cli.py  example.py  report.py
service/ccnp-server/src/: ccnp_server_pb.rs  ccnp_service.rs  handler.rs  main.rs
service/ccnp-server/src/tee/: mod.rs  tdx.rs
service/eventlog-server/: Makefile  README.md  go.mod  go.sum
service/measurement-server/: Makefile  README.md  go.mod  go.sum
service/pod-quote/: Cargo.toml  Makefile  README.md
service/pod-quote/src/: kube.rs  pod_quote.rs  tee.rs
service/pod-quote/tdx_attest/: Cargo.toml
service/quote-server/: Cargo.toml  Makefile  README.md  build.rs
service/quote-server/deployment/: quote_server-daemonset.yaml
service/quote-server/proto/: quote_server.proto
service/quote-server/src/: kube.rs  quote_server.rs  tee.rs  tee_tdx_lib.rs
service/quote-server/tdx_attest/: Cargo.toml  README.md
service/quote-server/tdx_attest/src/: tdx_attest.rs
service/quote-server/tdx_lib/: Cargo.toml
service/quote-server/tdx_lib/src/: tdx_lib.rs
test/e2e-test/: ci-clean.sh  ci-e2e-test.sh  ci-setup.sh  ci-test.sh  kind-config.yaml  repo-configmap.yaml  test_eventlog.py  test_tdquote.py  test_tdreport.py
tools/cvm-image-rewriter/: .gitignore  README.md  qemu-test.sh  run.sh  start-virt.sh  tdx-libvirt-ubuntu-host.xml.template
tools/image-builder/: create-ubuntu-image.sh
(+166 files in other folders)
