[metadata]
name = ccnp
version = 0.0.1
description = SDKs to enable confidential computing in cloud native environments
long_description = file: README.md
url = https://github.com/intel/confidential-cloud-native-primitives
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
