[package]
name = "ccnpServer"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the quote server
name = "ccnp_server"
path = "src/main.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
anyhow = "1.0"
async-trait = "0.1.56"
base64 = "0.13.0"
log = "0.4.14"
serde_json = "1.0"
sha2 = "0.10"
clap = { version = "4.0.29", features = ["derive"] }
tonic-reflection = "0.9.2"
tonic-health = "0.9.2"
nix = "0.26.2"
tdx_attest = "0.1.1"
lazy_static = "1.4.0"
cctrusted_vm = { git="https://github.com/cc-api/cc-trusted-api" }
cctrusted_base = { git="https://github.com/cc-api/cc-trusted-api" }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
simple_logger = "4.3.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version ="0.14.27" }
serial_test = { version ="2.0.0" }

[build-dependencies]
tonic-build = "0.9"
