[package]
name = "tdx_attest"
version = "0.1.1"
edition = "2021"
authors = ["Hairong Chen <hairong.chen@intel.com>"]
description = "A rust crate to retrieve TD Report and TDX quote via ioctl"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/confidential-cloud-native-primitives"

[lib]
name = "tdx_attest"
path = "src/tdx_attest.rs"

[dependencies]
nix = "0.26.2"
base64 = "0.13.0"
anyhow = "1.0"